--- a/src/app/shared/components/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.css
+++ b/src/app/shared/components/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.css
@@ -3,29 +3,12 @@
   margin: 30px 0;
   display: inline-block;
   vertical-align: top;
+
 }
 
-.example-list {
-  border: solid 1px #ccc;
-  min-height: 60px;
-  background: white;
-  border-radius: 6px;
-  overflow: visible;
-  display: block;
-}
-.example-list > :first-child {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-}
 
-.example-list > :last-child {
-  border-bottom-right-radius: 6px;
-  border-bottom-left-radius: 6px;
-}
 
 .example-box {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
@@ -34,8 +17,25 @@
   box-sizing: border-box;
   cursor: grab !important;
   background: white;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 7px;
+  margin-bottom: 15px;
+  border: 1.5px solid #ccc;
 }
+.example-list {
+  background: transparent;
+  overflow: visible;
+  display: block;
+}
+/* .example-list > :first-child {
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+}
+.example-list > :last-child {
+  border-bottom-left-radius: 7px;
+  border-bottom-right-radius: 7px;
+} */
 
 .cdk-drag-preview {
   box-sizing: border-box;
@@ -53,9 +53,6 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
-  border: none;
-}
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
@@ -74,11 +71,12 @@
 .click-action{
   cursor: grabbing !important;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1) 0s;
-  transform: scale(1.005);
+  transform: scale(1.001);
   box-sizing: border-box;
   border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 5px 5px -3px, rgba(0, 0, 0, 0.12) 0px 8px 10px 1px, rgba(0, 0, 0, 0.06) 0px 3px 14px 2px;
 }
+
 input{
   appearance: none;
   -webkit-appearance: none;
@@ -117,4 +115,75 @@ i.delete{
 }
 i.fav{
   color:rgb(255, 199, 30);
+}
+.hide{
+  transition: all .3s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.empty-tasks{
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  background: white;
+  display: grid;
+  padding: 30px 0;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+.empty-tasks img{
+   height: 300px;
+}
+
+.empty-tasks p{
+  font-size: 14px;
+  color:#4c4c4c
+}
+p{
+  color:#4b4b4b;
+}
+.section-title{
+  position: relative;
+  justify-content: space-between;
+}
+.section-title h3{
+  margin-bottom: 0px;
+  min-width: fit-content;
+}
+.section-title::before{
+    content: "";
+    background-image: url('../../../../assets/images/dots-bg.svg');
+    display: block;
+    height: 37px;
+    left: -14px;
+    top: -14px;
+    position: absolute;
+    width: 37px;
+}
+
+@media  (max-width:480px) {
+  .section-title::before{
+    content: "";
+    background-image: url('../../../../assets/images/dots-bg.svg');
+    display: block;
+    height: 30px;
+    left: -5px;
+    top: -10px;
+    position: absolute;
+    width: 30px;
+  }
+}
+
+.completed-task i{
+  padding: 5px;
+  background: #4b4b4b;
+  border-radius: 50%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: 0 10px 0 5px;
+  font-size: 14px;
+  cursor: pointer;
 }
