--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -36,7 +36,7 @@
                   </div>
 
                   <!-- Submit button -->
-                  <button type="button" class="btn btn-primary btn-block mb-4 w-100">Login</button>
+                  <button type="button" class="btn btn-primary btn-block mb-4 w-100" (click)="login()">Login</button>
 
                   <!-- Register buttons -->
                   <div class="text-center">
