--- a/src/app/modules/home/homepage/homepage.component.css
+++ b/src/app/modules/home/homepage/homepage.component.css
@@ -14,8 +14,8 @@ section{
   height: inherit;
   font-size: 18px;
   color: #464545;
-
-  padding: 13px 15px;
+  margin: 15px 0 0;
+  padding: 7px 15px;
   border: solid 1.5px #ccc;
 }
 .input-container i{
@@ -37,7 +37,7 @@ section{
   background: #606060;
 }
 .input-container input:focus{
-  border: 1px solid #eee;
+  border: solid 1.5px #ccc;
 }
 
 .list-container , .completed{
@@ -84,4 +84,64 @@ p{
     position: absolute;
     width: 30px;
   }
+}
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 5000;
+}
+
+.popup {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  width: 90%;
+}
+.head{
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin:15px 0 25px;
+}
+
+.popup .task-input{
+  border:none;
+  font-size:22px ;
+  font-weight: bold;
+  padding:0;
+}
+.popup input.myRadioButton{
+  width: 20px;
+  appearance: none;
+  -webkit-appearance: none;
+  border-radius: 50%;
+  background: #e8e8e8;
+  border: 3px solid #FFF;
+  transition: all .2s;
+  outline: 1px solid #999;
+  height: 20px;
+  margin-right: 15px;
+}
+.popup input.myRadioButton:hover{
+  cursor: pointer;
+  background: #a1a1a1;
+}
+
+textarea{
+  height: 150px;
+  border: 1px solid #999;
+  resize: none;
+}
+textarea:focus{
+  box-shadow: none;
+  border: 1px solid #999;
 }
