--- a/src/app/shared/components/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
+++ b/src/app/shared/components/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
@@ -9,13 +9,14 @@
     (cdkDropListDropped)="drop($event)">
     <div class="example-box"  *ngFor="let item of todo" cdkDrag  #itemRef (mousedown)="toggle($event)" (mouseup)="toggle($event)">
       <div class="d-flex align-items-center">
-        <input type="radio" class="myRadioButton" (click)="moveToDone(message)">
-        <p class="massage" #message>{{item}}</p>
+        <input type="radio" class="myRadioButton" (click)="moveToDone(input.value)">
+        <input name="tilte" class="hiddne-input" type="hidden" #input [value]="item.title">
+        <p class="massage">{{item.title}}</p>
       </div>
       <div class="action-btns d-flex algin-items-center">
-        <button class="my-btn"><i class="bi bi-pencil-square edit"></i></button>
-        <button class="my-btn"><i class="bi bi-trash delete"></i></button>
-        <button class="my-btn"><i class="bi bi-info-circle fav"></i></button>
+        <button class="my-btn"><i class="bi bi-pencil-square edit" (click)="edit($event)"></i></button>
+        <button class="my-btn"><i class="bi bi-trash delete" (click)="delete($event)"></i></button>
+        <button class="my-btn"><i [ngClass]="item.status?'bi-star-fill' : 'bi-star'" class="bi  fav"(click)="fav($event)"></i></button>
       </div>
     </div>
     <div class="empty-tasks" [ngClass]="{'d-none' : todo.length>0}" >
@@ -25,7 +26,7 @@
   </div>
 </div>
 
-<div  [ngClass]="{'d-none' : done.length==0}" class="section-title d-flex algin-items-center justfay-content-center mb-2 mt-4">
+<div  [ngClass]="{'d-none' : done.length==0}" class="section-title d-flex algin-items-center justfay-content-center  mt-4">
   <h5>Completed</h5>
 </div>
     <div class="example-container" [ngClass]="{'d-none' : done.length==0}">
@@ -38,12 +39,13 @@
         (cdkDropListDropped)="drop($event)">
         <div class="example-box" *ngFor="let item of done" cdkDrag>
           <div class="completed-task d-flex align-items-center ">
-            <i class="bi bi-check-lg" (click)="returnToList(mesg)"></i>
-            <p class="message" #mesg>{{item}}</p>
-          </div>
-          <div class="d-flex algin-items-center">
-            <button class="my-btn"><i class="bi bi-info-circle fav"></i></button>
-          </div>
+            <i class="bi bi-check-lg" (click)="returnToList(in.value)"></i>
+            <input type="hidden" #in [value]="item.title">
+            <p class="message" >{{item.title}}</p>
+        </div>
+        <div class="d-flex algin-items-center">
+          <button class="my-btn"><i [ngClass]="item.status?'bi-star-fill' : 'bi-star'" class="bi  fav opcity-icon" ></i></button>
         </div>
       </div>
     </div>
+</div>
