--- a/src/app/shared/components/layout/header/header.component.html
+++ b/src/app/shared/components/layout/header/header.component.html
@@ -18,12 +18,12 @@
           <div *ngIf="!hasImage" class="profile--circle">
             <a href="" class="profile--name">MS</a>
           </div>
-          <p class="profile--link text-bold main--color"><a href="">muhammed safwat</a></p>
+          <p class="profile--link text-bold main--color"><a href="">UserName</a></p>
           <ul >
             <li><a href="">Profile</a></li>
             <li><a href="">Setting</a></li>
           </ul>
-          <p class="logout py-2 text-start"><a href="" class="main--color py-2">Logout <i class="bi bi-box-arrow-right"></i></a></p>
+          <p class="logout py-2 text-start"><a  class="main--color py-2">Logout <i class="bi bi-box-arrow-right"></i></a></p>
         </div>
       </div>
     </div>
