--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -54,7 +54,7 @@
             </div>
             <div class="col-md-6 col-lg-6 d-none d-md-block ">
               <div class="d-flex align-items-center h-100">
-                <img src="../../../../assets/images/Computer login-rafiki(1).svg"
+                <img src="./assets/images/Computer login-rafiki(1).svg"
                 alt="login form" class="img-fluid  d-inline-block" style="border-radius: 1rem 0 0 1rem;" />
               </div>
             </div>
