--- a/src/app/shared/components/not-found/not-found.component.css
+++ b/src/app/shared/components/not-found/not-found.component.css
@@ -57,7 +57,7 @@
     max-width: 400px;
     margin: 0 auto;
     display: inherit;
-  };
+  }
   .main--head{
     font-size: 40px !important;
   }
