--- a/src/app/shared/components/not-found/not-found.component.html
+++ b/src/app/shared/components/not-found/not-found.component.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="row">
       <div class="col col-lg-6 col-md-12 col-12 order-lg-2">
-        <img  src="../../../../assets/images/404 Error Page not Found with people connecting a plug-rafiki.svg" alt="" class="error--image img-fluid">
+        <img  src="./assets/images/404 Error Page not Found with people connecting a plug-rafiki.svg" alt="" class="error--image img-fluid">
       </div>
       <div class="col col-lg-6 col-md-12 col-12 d-flex align-items-center order-lg-1">
           <div class="content">
