--- a/src/app/shared/components/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
+++ b/src/app/shared/components/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
@@ -3,14 +3,14 @@
   <div
     cdkDropList
     #todoList="cdkDropList"
-    [cdkDropListData]="todo"
+    [cdkDropListData]="todoService.getTodoList()"
     [cdkDropListConnectedTo]="[doneList]"
     class="example-list  list-container"
     (cdkDropListDropped)="drop($event)">
-    <div class="example-box"  *ngFor="let item of todo" cdkDrag  #itemRef (mousedown)="toggle($event)" (mouseup)="toggle($event)">
+    <div class="example-box"  *ngFor="let item of todoService.getTodoList()" cdkDrag  #itemRef (mousedown)="toggle($event)" (mouseup)="toggle($event)">
       <div class="d-flex align-items-center">
-        <input type="radio" class="myRadioButton" (click)="moveToDone(input.value)">
-        <input name="tilte" class="hiddne-input" type="hidden" #input [value]="item.title">
+        <input type="radio" class="myRadioButton" (click)="moveToDone(inputEl.value)">
+        <input type="hidden" #inputEl [value]="item.title" class="hidden-input">
         <p class="massage">{{item.title}}</p>
       </div>
       <div class="action-btns d-flex algin-items-center">
@@ -19,25 +19,25 @@
         <button class="my-btn"><i [ngClass]="item.status?'bi-star-fill' : 'bi-star'" class="bi  fav"(click)="fav($event)"></i></button>
       </div>
     </div>
-    <div class="empty-tasks" [ngClass]="{'d-none' : todo.length>0}" >
-      <img class='img-fluid' src="../../../../assets/images/personal goals checklist-cuate.svg" alt="image">
+    <div class="empty-tasks" [ngClass]="{'d-none' : todoService.getTodoList().length>0}" >
+      <img class='img-fluid' src="./assets/images/personal goals checklist-cuate.svg" alt="image">
       <p class="text-center">Foucs on your day, get things done with ToDo</p>
     </div>
   </div>
 </div>
 
-<div  [ngClass]="{'d-none' : done.length==0}" class="section-title d-flex algin-items-center justfay-content-center  mt-4">
+<div  [ngClass]="{'d-none' : todoService.getToDoneList().length==0}" class="section-title d-flex algin-items-center justfay-content-center  mt-4">
   <h5>Completed</h5>
 </div>
-    <div class="example-container" [ngClass]="{'d-none' : done.length==0}">
+    <div class="example-container" [ngClass]="{'d-none' : todoService.getToDoneList().length==0}">
       <div
         cdkDropList
         #doneList="cdkDropList"
-        [cdkDropListData]="done"
+        [cdkDropListData]="todoService.getToDoneList()"
         [cdkDropListConnectedTo]="[todoList]"
         class="example-list completed"
         (cdkDropListDropped)="drop($event)">
-        <div class="example-box" *ngFor="let item of done" cdkDrag>
+        <div class="example-box" *ngFor="let item of todoService.getToDoneList()" cdkDrag>
           <div class="completed-task d-flex align-items-center ">
             <i class="bi bi-check-lg" (click)="returnToList(in.value)"></i>
             <input type="hidden" #in [value]="item.title">
