--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 
+*{
+  margin: 0 ;
+  padding :0 ;
+  box-sizing: border-box;
+  font-size: 18px;
+  font-family: 'Cairo', sans-serif;
+  font-family: 'Nunito Sans', sans-serif !important;
+}
+
+html {
+  line-height: 1.15;
+}
+
+ul , li , p {
+  margin-bottom: 0;
+  text-decoration: none;
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+}
+
 .prime-slider-override,.p-inputtext.p-component.p-element.p-password-input{
   width: 100%;
   border-radius: 5px;
@@ -20,31 +43,6 @@
  div.prime-slider-override{
   border: 1px solid #474747;
 }
-
-*{
-  margin: 0 ;
-  padding :0 ;
-  box-sizing: border-box;
-  font-size: 18px;
-  font-family: 'Cairo', sans-serif;
-  font-family: 'Nunito Sans', sans-serif !important;
-}
-
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-ul , li , p {
-  margin-bottom: 0;
-  text-decoration: none;
-  list-style: none;
-}
-
-a{
-  text-decoration: none;
-}
-
 
 .main--btn{
   cursor: pointer;
