--- a/src/app/modules/auth/login/login.component.css
+++ b/src/app/modules/auth/login/login.component.css
@@ -59,3 +59,37 @@ a{
 h1{
   cursor: pointer;
 }
+.password-list{
+  li{
+    font-size: 10px;
+  }
+}
+.sug-header{
+  margin-top:10px ;
+  padding-top: 5px;
+  border-top: 1px solid rgb(181, 181, 181);
+}
+.alert{
+  padding: 0;
+  margin:0;
+  font-size: 12px;
+  color: rgba(255, 0, 0, 0.82);
+
+}
+.alert div{
+  font-size:16px;
+}
+.form--error{
+  padding: 0;
+  margin:0;
+  font-size: 12px;
+  color: rgba(255, 0, 0, 0.82);
+  padding-right: 10px;
+}
+.form--error div{
+  font-size:16px;
+  padding-left: 15px;
+}
+.error-border{
+  border: 2px solid #ff1d1d !important;
+}
