--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -9,43 +9,72 @@
                   <h1 class="h3 fw-bold mb-3" [routerLink]="''"><i class=" h3 bi bi-box pr-1 d-inline-block"></i> ToDo</h1>
                   <h5 class="sub--head fw-bold text-center">Sign Up</h5>
                   <p class="sub--p text-center mb-3 text-muted">Enter your details to create your a PortfolioPlus account</p>
-                <form>
+                <form [formGroup]="singupFrom" (ngSubmit)="singup()">
                   <div class="row mt-3 mb-2">
                     <div class="col-6">
                     <label class="form-label" >First Name</label>
-                      <input class="form-control sub--p" type="text">
+                      <input class="form-control sub--p" type="text" formControlName="firstName">
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 ">
                     <label class="form-label" >Last Name</label>
-                      <input class="form-control sub--p" type="text" >
+                      <input class="form-control sub--p" type="text" formControlName="lastName">
                     </div>
+                    <div class="col-6 form--error">
+                      <div *ngIf="singupFrom.controls['firstName'].invalid &&
+                           (singupFrom.controls['firstName'].dirty || singupFrom.controls['firstName'].touched)">
+                        Name is required.
+                      </div>
+                    </div>
+                    <div class="col-6 form--error">
+                      <div *ngIf="singupFrom.controls['lastName'].invalid &&
+                           (singupFrom.controls['lastName'].dirty || singupFrom.controls['lastName'].touched)">
+                        Name is required.
+                      </div>
+                    </div>
+
+
                   </div>
                   <div class="form-outline mb-2">
                     <label class="form-label" >Email address</label>
-                    <input type="email" class="form-control"/>
+                    <input type="email" class="form-control" formControlName="username"/>
+                  </div>
+                  <div *ngIf="singupFrom.controls['username'].invalid &&
+                              (singupFrom.controls['username'].dirty || singupFrom.controls['username'].touched)" class="alert mb-1">
+                    <div *ngIf="singupFrom.controls['username'].errors">
+                      Please enter email
+                    </div>
                   </div>
                   <div class="form-outline mb-2">
                     <label class="form-label" >Password</label>
                     <div class="w-100">
-                      <p-password styleClass="prime-slider-override" [(ngModel)]="pass.value" [toggleMask]="true" #pass></p-password>
+                      <p-password formControlName="password" styleClass="prime-slider-override" [(ngModel)]="pass.value" [toggleMask]="true" #pass>
+                        <ng-template pTemplate="header">
+                            <h6>Pick a password</h6>
+                        </ng-template>
+                        <ng-template pTemplate="footer">
+
+                            <p class="sug-header">Suggestions</p>
+                            <ul class="password-list" class="pl-2 ml-2 mt-0" style="line-height: 1.5">
+                                <li>At least one lowercase</li>
+                                <li>At least one uppercase</li>
+                                <li>At least one numeric</li>
+                                <li>Minimum 8 characters</li>
+                            </ul>
+                        </ng-template>
+                    </p-password>
                     </div>
                   </div>
                   <!-- Submit button -->
-                  <button type="button" class="btn btn-primary btn-block mt-2 mb-4 w-100">Sign Up</button>
-
+                  <button type="submit" class="btn btn-primary btn-block mt-2 mb-4 w-100">Sign Up</button>
                   <!-- Register buttons -->
                   <div class="text-center">
                     <p>Not a member? <a href='' [routerLink]="'../login'">sign in</a></p>
                     <p>or</p>
-                    <button type="button" class="btn btn-link btn-floating mx-1">
-                      <i class="bi bi-linkedin"></i>
-                    </button>
-
-                    <button type="button" class="btn btn-link btn-floating mx-1">
+                    <button type="button" class="btn btn-link btn-floating mx-1" (click)="googleSignup()">
                       <i class="bi bi-google"></i>
                     </button>
 
-                    <button type="button" class="btn btn-link btn-floating mx-1">
+                    <button type="button" class="btn btn-link btn-floating mx-1" (click)="githubSignup()">
                       <i class="bi bi-github"></i>
                     </button>
                   </div>
@@ -63,4 +92,5 @@
       </div>
     </div>
   </div>
+  <p-toast  position="bottom-right" [showTransitionOptions]="'500ms'"></p-toast>s
 </section>
