--- a/src/app/shared/components/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
+++ b/src/app/shared/components/cdk-drag-drop-connected-sorting-example/cdk-drag-drop-connected-sorting-example.component.html
@@ -10,11 +10,11 @@
     <div class="example-box"  *ngFor="let item of todoService.getTodoList()" cdkDrag  #itemRef (mousedown)="toggle($event)" (mouseup)="toggle($event)">
       <div class="d-flex align-items-center">
         <input type="radio" class="myRadioButton" (click)="moveToDone(inputEl.value)">
-        <input type="hidden" #inputEl [value]="item.title" class="hidden-input">
+        <input type="hidden" #inputEl [value]="item.id" class="hidden-input">
         <p class="massage">{{item.title}}</p>
       </div>
       <div class="action-btns d-flex algin-items-center">
-        <button class="my-btn"><i class="bi bi-pencil-square edit" (click)="edit($event)"></i></button>
+        <button class="my-btn"><i class="bi bi-pencil-square edit" (click)="update($event)"></i></button>
         <button class="my-btn"><i class="bi bi-trash delete" (click)="delete($event)"></i></button>
         <button class="my-btn"><i [ngClass]="item.status?'bi-star-fill' : 'bi-star'" class="bi  fav"(click)="fav($event)"></i></button>
       </div>
@@ -39,7 +39,7 @@
         <div class="example-box" *ngFor="let item of todoService.getToDoneList()" cdkDrag>
           <div class="completed-task d-flex align-items-center ">
             <i class="bi bi-check-lg" (click)="returnToList(in.value)"></i>
-            <input type="hidden" #in [value]="item.title">
+            <input type="hidden" #in [value]="item.id">
             <p class="message" >{{item.title}}</p>
         </div>
         <div class="d-flex algin-items-center">
