--- a/src/app/shared/components/layout/header/header.component.html
+++ b/src/app/shared/components/layout/header/header.component.html
@@ -23,7 +23,11 @@
             <li><a href="">Profile</a></li>
             <li><a href="">Setting</a></li>
           </ul>
-          <p class="logout py-2 text-start"><a  class="main--color py-2">Logout <i class="bi bi-box-arrow-right"></i></a></p>
+          <p class="logout py-2 text-start" (click)="logout()">
+            <a  class="main--color py-2">Logout
+              <i class="bi bi-box-arrow-right"></i>
+            </a>
+          </p>
         </div>
       </div>
     </div>
